# Pseudonymity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  go.mod  pseudonymise.py  pseudonymity_gui.py  pyproject.toml
data/: sample_customers.csv
docs/: architecture.md  audit_and_inspection.md  concepts.md  enisa_gdpr_pseudonymisation.md  gui.md  profile_schema.md  roadmap.md  technical_walkthrough.md
go/pseudonymity-risk/: README.md  main.go
profiles/: ecommerce.json
pseudonymity/: __init__.py  __main__.py  cli.py  constants.py  crypto.py  datasets.py  engine.py  gui.py  inspect.py  io.py  profiles.py  risk.py  techniques.py  vault.py
scripts/: build-go-risk.sh  build-python.sh  check.sh  demo.sh
